--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         justify-content: center;
         }
         .center{
-            width:200px;
-            height: 50px;
+            width:300px;
+            height: 100px;
             font-size: 2rem;
             font-color:black;
             font-family: Arial;
@@ -39,6 +39,7 @@
         a{
             text-decoration: none;
             color:black;
+            text-align:center;
         }
         
         
