--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             font-weight: bold;
             background-color:white;
             margin:auto;
+            text-align:center;
             box-shadow:0 2px 3px 2px rgba(0,0,0,0.6);
         }
         a{
