--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         .center{
             width:300px;
             height: 100px;
-            font-size: 2rem;
+            font-size: 4rem;
             font-color:black;
-            font-family: Arial;
+            font-family: ALGERIAN;
             font-weight: bold;
             background-color:white;
             margin:auto;
